--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<html>
-<head>
-    <title>My home page  </title>
-</head>
-<body>
-<h1>Hello, my friend</h1>
-This is some <b>text</b>
-</body>
-</html>
+<pre>
+<?php
+     include 'lab1.2.2.1.php';
